--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>MEOW~</title>
+    <link rel="stylesheet" href="style.css">  
   </head>
-  
   <body>
     <h1>
       ALIBABA
